# handwritten-digit-recognition

./: .gitignore  CMakeLists.txt  README.md
src/: date.cc  date.hh  main-dnn.cc  main-logreg.cc  main-softmaxreg.cc  main.cc  math.hh  matrix.cc  matrix.hh  matrix.hxx  mnist-data.cc  mnist-data.hh  neural-network.cc  neural-network.hh  neural-network.hxx  random.cc  random.hh  random.hxx  serial.hh  serial.hxx  vector.cc  vector.hh  vector.hxx
tests/: main.cc
